--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,3 +57,39 @@ footer {
         height: 200px;
     }
 }
+
+.chat-message {
+    margin: 8px 0;
+    padding: 8px 16px;
+    border-radius: 16px;
+    max-width: 60%;
+    clear: both;
+    display: inline-block;
+    position: relative;
+    word-break: break-all;
+}
+
+.chat-message-self {
+    background: #1976d2;
+    color: #fff;
+    float: right;
+    text-align: right;
+}
+
+.chat-message-other {
+    background: #eee;
+    color: #222;
+    float: left;
+    text-align: left;
+}
+
+.chat-author {
+    font-weight: bold;
+    margin-right: 4px;
+}
+
+.chat-time {
+    font-size: 12px;
+    color: #aaa;
+    margin-left: 8px;
+}
